# ObserveML-Production-Observability

./: .gitignore  CHANGELOG.md  Caddyfile  LICENSE  NEXUS-ACTIVATION-PLAN.md  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci-cd.yml  publish-npm.yml  publish-pypi.yml
agent-activations/: all-agents.md
api/: requirements.txt
api/app/: config.py  main.py
api/tests/: conftest.py  test_integration.py  test_sprint04.py  test_sprint05.py  test_sprint06.py
dashboard/: Dockerfile  index.html  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx
docs/: 01-prd.md  02-architecture.md  03-database-schema.md  05-security-threat-model.md  06-test-plan.md  07-multi-region-runbook.md
docs-site/: mkdocs.yml
docs-site/docs/: api-reference.md  changelog.md  index.md  privacy.md  quickstart.md
grafana-plugin/: README.md  plugin.json
grafana-plugin/src/: datasource.ts
memory/project-state/: v0.1.0-2026-03-11.md  v0.1.1-2026-03-11.md  v0.2.0-2026-03-11.md  v1.0.0-2026-03-11.md
migrations/clickhouse/: 001_metric_events.sql  002_session_id.sql  002_trace_id.sql
migrations/postgres/: 001_initial.sql  002_alert_fired.sql  003_teams.sql  004_audit_log.sql  (+2 more)
scripts/: seed_dev.py
sdk/python/: README.md  pyproject.toml
sdk/python/observeml/: __init__.py  tracker.py
sdk/python/tests/: test_sdk_v1.py  test_tracker.py
sprints/: sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md
(+49 files in other folders)
