[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "observeml"
version = "1.0.0"
description = "Drop-in LLM observability SDK — metadata only, never prompt content"
authors = [{ name = "The Agency", email = "agi@theagency.dev" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "observability", "openai", "anthropic", "monitoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["observeml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
